fix spacing in line chart

--- a/front/src/app/components/months-linechart/months-linechart.component.scss
+++ b/front/src/app/components/months-linechart/months-linechart.component.scss
@@ -27,3 +27,12 @@
   justify-content: center;
   align-items: center;
 }
+.chart-item {
+  //   width: 18rem;
+  margin: 2rem 1rem;
+}
+
+.chart-item canvas {
+  width: 100% !important;
+  height: 100% !important;
+}
